--- a/styles.css
+++ b/styles.css
@@ -54,8 +54,16 @@ th {
     color: white;
 }
 
-tr:nth-child(even) {
-    background-color: #fffdee;
+tr:nth-child(2n+1) {
+    background-color: #fefcd1
+}
+
+#leaderboard tr:nth-child(n+61):nth-child(2n+1) {
+    background-color: #fffdee; /* Slightly lighter color for rows 61 to 80 */
+}
+
+#leaderboard tr:nth-child(n+81):nth-child(2n+1) {
+    background-color: #4286f40c; /* Even lighter color for rows after 80 */
 }
 
 /* Flexible widths for name and View Badges columns */
@@ -151,3 +159,4 @@ th, td {
     letter-spacing: 0.5px;
     line-height: 1.5;
 }
+
